--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -33,4 +33,4 @@ en:
   hello: "Hello world"
   notifications:
     lock_suggestion_notification:
-      message: "Your Lock has been approved!"
+      message: "Your fellow explorer has suggested a new lock and it has been added to the collection. Check it out!"
